Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Use AC_CONFIG_DIRS instead of CONFIG_DIRS, and
		remove use of DO_SUBDIRS.

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Fri Jul 25 15:24:41 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Bump version due to et changes.

Sat Feb 22 01:37:03 1997  Sam Hartman  <hartmans@luminous.MIT.EDU>

	* Makefile.in (LIBMINOR): Bump minor version

Thu Nov 21 11:55:16 EST 1996    Richard Basch   <basch@lehman.com>

        * Makefile.in: win32 build

Fri Feb  7 21:48:10 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Add rule to install libraries.

Fri Jan  3 16:47:59 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to use new KRB5_BUILD_LIBRARY_WITH_DEPS
 	macro.

	* Makefile.in:
	* configure.in: Update to new library build procedure.

Mon Nov 18 20:42:39 1996  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Set shared library version to 1.0. [krb5-libs/201]

Wed Oct 23 01:15:40 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* configure.in, Makefile.in: Check to see if the -lgen library
		exists; if so, add it to the SHLIB_LIBS line, since it
		will be needed by an_to_ln.c, in all probability.

Fri Jun  7 17:38:09 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (all-windows, clean-windows): Use full directory
		name "error_tables" when building under Windows so that
		the build will work correctly under VFAT and NTFS filesystems.

Thu Jun  6 00:04:38 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (all-windows): Don't pass $(LIBCMD) on the command
		line.  It's set in the windows.in prologue for all Makefiles anyway.

Mon May 20 10:56:51 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* Makefile.in (libkrb5.$(STEXT)): fix sense of test; also deal
		with new improved libupdate

Tue Apr 30 16:31:50 1996  Ken Raeburn  <raeburn@cygnus.com>

	* Makefile.in (libkrb5.$(STEXT)): Set a variable with or without