@@ -1,6 +1,6 @@
 AC_INIT(configure.in)
 CONFIG_RULES
-AC_CONFIG_SUBDIRS(error_tables asn.1 ccache keytab krb rcache free os posix)
+AC_CONFIG_SUBDIRS(error_tables asn.1 ccache keytab krb rcache os posix)
 AC_PROG_INSTALL
 dnl
 USE_ANAME
