@@ -1,3 +1,9 @@
+Fri Feb 13 15:26:42 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* Makefile.in, configure.in: Remove the free directory from the
+ 		list of subdirectories to be built.  (All functions moved
+ 		into lib/krb5/free/kfree.c)
+
 Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* configure.in: Use AC_CONFIG_DIRS instead of CONFIG_DIRS, and
